# koi-demo

./: .gitignore  Makefile  README.md  code.txt  docker-compose.yaml  plan.md  pyproject.toml  render.yaml  repomix-output.xml  setup_path.py  test_rid_types.py
.ai/: Processor.md  code-1.txt  code-2.txt  code-3.txt  koi-howto.md
.github/workflows/: deploy.yml
config/docker/: coordinator.yaml  github-sensor.yaml  global.env.example  hackmd-sensor.yaml  processor-a.yaml  processor-b.yaml
config/local/: coordinator.yaml  github-sensor.yaml  global.env.example  hackmd-sensor.yaml  processor-a.yaml  processor-b.yaml
nodes/koi-net-coordinator-node/: Dockerfile  README.md  fly.toml  koi-net-coordinator-node.service  pyproject.toml  requirements.txt
nodes/koi-net-coordinator-node/coordinator_node/: __init__.py  __main__.py  config.py  config_loader.py  core.py  handlers.py  server.py
nodes/koi-net-github-sensor-node/: Dockerfile  fly.toml  pyproject.toml  repomix-output.xml
nodes/koi-net-github-sensor-node/github_sensor_node/: __init__.py  __main__.py  backfill.py  config.py  core.py  loader.py  server.py  types.py  webhook.py
nodes/koi-net-github-sensor-node/github_sensor_node/handlers/: github.py
nodes/koi-net-hackmd-sensor-node/: .gitignore  Dockerfile  README.md  fly.toml  koi-net-hackmd-sensor-node.service  pyproject.toml  requirements.txt  rid_types.py
nodes/koi-net-hackmd-sensor-node/hackmd_sensor_node/: __init__.py  __main__.py  backfill.py  config.py  core.py  hackmd_api.py  handlers.py  server.py
nodes/koi-net-processor-a-node/: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
nodes/koi-net-processor-a-node/processor_a_node/: __init__.py  __main__.py  config.py  core.py  handlers.py  server.py
nodes/koi-net-processor-b-node/: Dockerfile  README.md  fly.toml  pyproject.toml
nodes/koi-net-processor-b-node/processor_b_node/: __init__.py  __main__.py  config.py  core.py  handlers.py  server.py
rid_types/: README.md  __init__.py  github.py  hackmd.py  pyproject.toml
scripts/: prd.txt
