[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rid_types"
version = "0.1.0"
description = "Shared RID types for the KOI-net system"
authors = [
    {name = "KOI-net Team"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rid-lib>=3.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
package-dir = {"" = "."} 